--- a/boilerplate/justifyContent.html
+++ b/boilerplate/justifyContent.html
@@ -24,5 +24,65 @@
             <div>Item 5</div>
         </div>
     </div>
+    <div class="head-container">
+        <h3 class="text-center">justify-content: flex-end</h3>
+        <div class="flex-container end">
+            <div>Item 1</div>
+            <div>Item 2</div>
+            <div>Item 3</div>
+            <div>Item 4</div>
+            <div>Item 5</div>
+        </div>
+    </div>
+    <div class="head-container">
+        <h3 class="text-center">justify-content: flex-center</h3>
+        <div class="flex-container center">
+            <div>Item 1</div>
+            <div>Item 2</div>
+            <div>Item 3</div>
+            <div>Item 4</div>
+            <div>Item 5</div>
+        </div>
+    </div>
+    <div class="head-container">
+        <br class="text-center">flex-direction: column justify-content: flex-center</h3>
+        <div class="flex-container column-center">
+            <div>Item 1</div>
+            <div>Item 2</div>
+            <div>Item 3</div>
+            <div>Item 4</div>
+            <div>Item 5</div>
+        </div>
+    </div>
+    <div class="head-container">
+        <br class="text-center">flex-direction: column justify-content: flex-between</h3>
+        <div class="flex-container column-between">
+            <div>Item 1</div>
+            <div>Item 2</div>
+            <div>Item 3</div>
+            <div>Item 4</div>
+            <div>Item 5</div>
+        </div>
+    </div>
+    <div class="head-container">
+        <h3 class="text-center">justify-content: space-around</h3>
+        <div class="flex-container space-around">
+            <div>Item 1</div>
+            <div>Item 2</div>
+            <div>Item 3</div>
+            <div>Item 4</div>
+            <div>Item 5</div>
+        </div>
+    </div>
+    <div class="head-container">
+        <h3 class="text-center">justify-content: space-between</h3>
+        <div class="flex-container space-between">
+            <div>Item 1</div>
+            <div>Item 2</div>
+            <div>Item 3</div>
+            <div>Item 4</div>
+            <div>Item 5</div>
+        </div>
+    </div>
 </body>
 </html>
