--- a/boilerplate/flexBasis.html
+++ b/boilerplate/flexBasis.html
@@ -22,5 +22,23 @@
             <div>Item 3</div>
         </div>
     </div>
+
+    <div class="head-container">
+        <h3 class="text-center">Item 2 has width of 200px. flex-basis: 200px;</h3>
+        <div class="flex-container sample2">
+            <div>Item 1</div>
+            <div>Item 2</div>
+            <div>Item 3</div>
+        </div>
+    </div>
+
+    <div class="head-container">
+        <h3 class="text-center">Item 2 has width of 200px. flex-basis: 200px;</h3>
+        <div class="flex-container sample3">
+            <div>Item 1</div>
+            <div>Item 2</div>
+            <div>Item 3</div>
+        </div>
+    </div>
 </body>
 </html>
