--- a/boilerplate/flexGrow.html
+++ b/boilerplate/flexGrow.html
@@ -22,5 +22,23 @@
             <div>Item 3</div>
         </div>
     </div>
+
+    <div class="head-container">
+        <h3 class="text-center">All items have flex grow 1</h3>
+        <div class="flex-container sample2">
+            <div>Item 1</div>
+            <div>Item 2</div>
+            <div>Item 3</div>
+        </div>
+    </div>
+
+    <div class="head-container">
+        <h3 class="text-center">2 and 3 grow in ration 1:2</h3>
+        <div class="flex-container sample3">
+            <div>Item 1</div>
+            <div>Item 2</div>
+            <div>Item 3</div>
+        </div>
+    </div>
 </body>
 </html>
